Corrected CSS error in letter-spacing

--- a/screen.css
+++ b/screen.css
@@ -70,6 +70,6 @@ h1 {
 p {
 	font-size: 100%;
 	line-height: 2;
-	letter-spacing: 1%;
+	letter-spacing: 1px;
 	margin-bottom: 3%;
 }
